# dag_slicer

./: .gitignore  CMakeLists.txt  Dag_Slicer.py  LICENSE.txt  Makefile  README.md  build.sh  clean.sh  dag_slicer.cpp  dag_slicer.hpp  dag_slicer.i  dag_slicer_interactive.ipynb  dag_slicer_wrap.cxx  dagmc_slice_tool.py  dagmc_slicer_gui.py  plot.gp  setup.py  xdressrc.py
dag_slicer/: CMakeLists.txt  cpp_dag_slicer.pxd  dag_slicer.pxd  dag_slicer.pyx  dtypes.pxd  dtypes.pyx  stlcontainers.pxd  stlcontainers.pyx
dag_slicer/tests/: test_dtypes.py  test_stlcontainers.py
dagmc_slicer/: dagmc_slice_tool.py  dagmc_slicer_gui.py
examples/: dagmc_slicer_example.ipynb
ipynb/: dag_slicer_interactive.py
patches/: pxd_patch.txt  pyx_patch.txt
slicer/: CMakeLists.txt
src/: CMakeLists.txt  Dag_Slicer.py  Makefile  dag_slicer.cpp  dag_slicer.hpp  dag_slicer.i  dag_slicer_wrap.cxx  dagmc_slice_tool.py  dagmc_slicer_gui.py  model_slicer.cpp  options.hpp  plot.gp  poly_intersections.py  slice  slice_tool.py  slicer.cpp  slicer.hpp
test/: CMakeLists.txt  Makefile  test_dagmc_slicer.py  test_slicer.cpp  testutils.hpp
